--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -5749,6 +5749,23 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [「用 AI 训 AI」这事靠谱吗？](https://mp.weixin.qq.com/s/bLLoYDTpq8q7ExfwyDekOQ)
 
+## DPO
+
+[Direct preference optimization: Your language model is secretly a reward model](https://arxiv.org/pdf/2305.18290)
+
+DPO 通过数学推导，得到了**奖励函数与最优策略之间的直接映射**，消除了RLHF过程中的奖励建模阶段
+
+$$
+r(x, y)=\beta \log \frac{\pi_r(y \mid x)}{\pi_{\text {ref }}(y \mid x)}+\beta \log Z(x)
+$$
+
+代入Bradley-Terry模型，可以得到
+
+$$
+\mathcal{L}_{\mathrm{DPO}}\left(\pi_\theta ; \pi_{\text {ref }}\right)=-\mathbb{E}_{\left(x, y_w, y_l\right) \sim \mathcal{D}}\left[\log \sigma\left(\beta \log \frac{\pi_\theta\left(y_w \mid x\right)}{\pi_{\text {ref }}\left(y_w \mid x\right)}-\beta \log \frac{\pi_\theta\left(y_l \mid x\right)}{\pi_{\text {ref }}\left(y_l \mid x\right)}\right)\right]
+$$
+
+
 ## SimPO
 
 [全面超越DPO：陈丹琦团队提出简单偏好优化SimPO，还炼出最强8B开源模型](https://mp.weixin.qq.com/s/wJKiDU8t2RW2DpnqYR1h8w)
