--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -5753,7 +5753,7 @@ Old Logprobs是一次性一个batch的数据计算的，这是因为在一个bat
 
 [Direct preference optimization: Your language model is secretly a reward model](https://arxiv.org/pdf/2305.18290)
 
-DPO 通过数学推导，得到了**奖励函数与最优策略之间的直接映射**，消除了RLHF过程中的奖励建模阶段
+DPO 通过数学推导，得到了**奖励函数与最优策略之间的直接映射**，消除了RLHF过程中的奖励建模阶段，$$Z(x)=\sum_y \pi_{\text {ref }}(y \mid x) \exp \left(\frac{1}{\beta} r(x, y)\right)$$是partition function，
 
 $$
 r(x, y)=\beta \log \frac{\pi_r(y \mid x)}{\pi_{\text {ref }}(y \mid x)}+\beta \log Z(x)
@@ -5765,6 +5765,11 @@ $$
 \mathcal{L}_{\mathrm{DPO}}\left(\pi_\theta ; \pi_{\text {ref }}\right)=-\mathbb{E}_{\left(x, y_w, y_l\right) \sim \mathcal{D}}\left[\log \sigma\left(\beta \log \frac{\pi_\theta\left(y_w \mid x\right)}{\pi_{\text {ref }}\left(y_w \mid x\right)}-\beta \log \frac{\pi_\theta\left(y_l \mid x\right)}{\pi_{\text {ref }}\left(y_l \mid x\right)}\right)\right]
 $$
 
+其中：
+
++ $$x$$：来自偏好数据集的prompt
++ $$y_w$$：来自偏好数据集的获胜response
++ $$y_l$$：来自偏好数据集的失败response
 
 ## SimPO
 
