--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -8144,7 +8144,7 @@ and I strongly advise against it. It may also land you in legal trouble.
 
 让人类给的feedback label只用来学helpfulness，而harmlessness的label则都通过多选题的方式由模型自己产出，随后distilled back给一个preference model
 
-
+另外找一个pretrained model当成feedback model
 
 
 ## 自我奖励
