--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -9317,3 +9317,7 @@ print(tokenizer.all_special_ids)    # --> [100, 102, 0, 101, 103]
 [https://pytorch.org/tutorials/recipes/recipes/profiler_recipe.html](https://pytorch.org/tutorials/recipes/recipes/profiler_recipe.html)
 
 可以拿这个来可视化：[https://ui.perfetto.dev/](https://ui.perfetto.dev/)
+
+## 各型号gpu对比
+
+[https://zhuanlan.zhihu.com/p/441153412](https://zhuanlan.zhihu.com/p/441153412)
