--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -9318,6 +9318,13 @@ print(tokenizer.all_special_ids)    # --> [100, 102, 0, 101, 103]
 
 可以拿这个来可视化：[https://ui.perfetto.dev/](https://ui.perfetto.dev/)
 
+- 点击open trace file上传json文件
+- timeline中有两个python进程，点击cuda kernel会出现箭头，方便找到是**哪个op调用了该kernel**
+  - 靠上的 python 进程是 host 侧进程（主要是用户代码中调用的一些**API/pytorch op**，能比较方便能和训练代码对应上）
+  - 靠下的python进程是device（gpu）侧进程（记录实际 cuda kernel 的执行和一些性能相关的数据）
+
+device timeline比较稀疏的情况下训练性能较差， GPU利用率较低， 可能需要排查下训练代码是否有问题
+
 ## 各型号gpu对比
 
 [https://zhuanlan.zhihu.com/p/441153412](https://zhuanlan.zhihu.com/p/441153412)
