--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -9325,6 +9325,10 @@ print(tokenizer.all_special_ids)    # --> [100, 102, 0, 101, 103]
 
 device timeline比较稀疏的情况下训练性能较差， GPU利用率较低， 可能需要排查下训练代码是否有问题
 
+## memory viz
+
+[https://pytorch.ac.cn/docs/stable/torch_cuda_memory.html](https://pytorch.ac.cn/docs/stable/torch_cuda_memory.html)
+
 ## 各型号gpu对比
 
 [https://zhuanlan.zhihu.com/p/441153412](https://zhuanlan.zhihu.com/p/441153412)
