--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -9325,9 +9325,14 @@ print(tokenizer.all_special_ids)    # --> [100, 102, 0, 101, 103]
 
 device timeline比较稀疏的情况下训练性能较差，GPU利用率较低，可能需要排查下训练代码是否有问题
 
-## memory viz
+## 显存泄露排查
 
 [https://pytorch.ac.cn/docs/stable/torch_cuda_memory.html](https://pytorch.ac.cn/docs/stable/torch_cuda_memory.html)
+
+[https://pytorch.org/blog/understanding-gpu-memory-1/](https://pytorch.org/blog/understanding-gpu-memory-1/)
+
+[https://pytorch.org/blog/understanding-gpu-memory-2/](https://pytorch.org/blog/understanding-gpu-memory-2/)
+
 
 ## 各型号gpu对比
 
