--- a/posts/2.recommend.md
+++ b/posts/2.recommend.md
@@ -615,6 +615,12 @@ xx
 
 sdim：[https://zhuanlan.zhihu.com/p/560657191](https://zhuanlan.zhihu.com/p/560657191)
 
+## 多场景
+
+[多模态多兴趣多场景的召回算法](https://mp.weixin.qq.com/s/nBBPuwPBVC0JEB3trEk12g)
+
+[M5: Multi-Modal Multi-Interest Multi-Scenario Matching for Over-the-Top Recommendation](https://dl.acm.org/doi/pdf/10.1145/3580305.3599863)
+
 ## transformer+召回
 
 ICLR2020 cmu+google：
