--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -3583,6 +3583,14 @@ Google的大规模稀疏模型设计
 
 # 推理框架
 
+## KVCache
+
+kvcache的量化：[https://zhuanlan.zhihu.com/p/691537237](https://zhuanlan.zhihu.com/p/691537237)
+
+一些结论：
+
++ 浅层KV cache相比于深层KV cache，对模型的重要性更大。
+
 ## 量化
 
 [ZeroQuant-V2: Exploring Post-training Quantization in LLMs from Comprehensive Study to Low Rank Compensation](https://arxiv.org/pdf/2303.08302.pdf)和[Compression of generative pre- trained language models via quantization](https://arxiv.org/pdf/2203.10705.pdf)
