--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -6260,6 +6260,12 @@ $$
 
 [https://github.com/ZiyiZhang27/tdpo](https://github.com/ZiyiZhang27/tdpo)
 
+## self-critiquing
+
+[Self-critiquing models for assisting human evaluators](https://arxiv.org/abs/2206.05802)
+
+有AI辅助的标注员能比无AI辅助的标注员找出更多的摘要中的错误
+
 ## Reward Centering
 
 [强化学习之父Richard Sutton给出一个简单思路，大幅增强所有RL算法](https://mp.weixin.qq.com/s/lwoq764gVSFjsEhzPS3ChQ)
