--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -10076,3 +10076,20 @@ Thread 0x9922BCDA (idle): "Thread-6"
 ```shell
 FLASH_ATTENTION_FORCE_BUILD=TRUE pip install flash-attn
 ```
+
+
+# GPU机型对比
+
++ L20：[https://www.techpowerup.com/gpu-specs/l20.c4206](https://www.techpowerup.com/gpu-specs/l20.c4206)
+  + T flops：
+    + tf32：59.8
+    + fp32：59.8 
+    + bf16：119.5
+    + fp16：119.5
++ A800-40G：[https://www.techpowerup.com/gpu-specs/a800-pcie-40-gb.c3964](https://www.techpowerup.com/gpu-specs/a800-pcie-40-gb.c3964)
+  + T flops：
+    + tf32：156
+    + fp32：19.5
+    + bf16：312
+    + fp16：77.97
+
