--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -1,6 +1,16 @@
 本网站目录：
 
 + [llm_aigc](https://www.daiwk.net/1.llm_aigc)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_aigc.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
 + [recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
 + [int-ml](https://www.daiwk.net/8.int-ml)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
 + [collections](https://www.daiwk.net/9.collections)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/collections.pdf)
