--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -2,15 +2,13 @@
 
 + [llm_aigc](https://www.daiwk.net/1.llm_aigc)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_aigc.pdf)
     + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
-    + [pre_llm](https://www.daiwk.net/1.1.pre_llm)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/pre_llm.pdf)
+    + [llm_intro](https://www.daiwk.net/1.2.llm_intro)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_intro.pdf)
+    + [llm_archs](https://www.daiwk.net/1.3.llm_archs)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_archs.pdf)
+    + [llm_sft_and_usages](https://www.daiwk.net/1.4.llm_sft_and_usages)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_sft_and_usages.pdf)
+    + [llm_alignment](https://www.daiwk.net/1.5.llm_alignment)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_alignment.pdf)
+    + [llm_multimodal](https://www.daiwk.net/1.6.llm_multimodal)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_multimodal.pdf)
+    + [llm_o1](https://www.daiwk.net/1.8.llm_o1)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_o1.pdf)
+    + [llm_others](https://www.daiwk.net/1.9.llm_others)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_others.pdf)
 + [recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
 + [int-ml](https://www.daiwk.net/8.int-ml)对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/int-ml.pdf)
 + [collections](https://www.daiwk.net/9.collections)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/collections.pdf)
