--- a/posts/1.8.llm_o1.md
+++ b/posts/1.8.llm_o1.md
@@ -1,36 +1,4 @@
-# O1
-
-## from r to Q*
-
-[这就是OpenAI神秘的Q*？斯坦福：语言模型就是Q函数](https://mp.weixin.qq.com/s/Mz_k5ensgiuXu-3cFQ1Dkw)
-
-[From r to Q*: Your Language Model is Secretly a Q-Function](https://arxiv.org/pdf/2404.12358.pdf)
-
-在DPO的基础上，引入LLM里的token-level的MDP，用二分类的preference feedback。发现了3个点：
-
-+ 尽管 DPO 是作为上下文多臂赌博机而派生出来的，但DPO模型的隐含奖励可在每个 token 层面上进行解释。
-+ DPO模型的likelihood search类似在decoding阶段寻找一个reward function。即在token层面的阐述方式下，经典的基于搜索的算法（比如 MCTS）等价于在 DPO策略上的基于似然的搜索。
-+ 初始策略和参考分布的选择对于确定训练期间隐性奖励的轨迹非常重要。
-
-[OpenAI秘密武器「草莓」计划曝光！Q*推理能力大爆发，逼近AGI L2里程碑](https://mp.weixin.qq.com/s/qq_E05Tab-ptRqGDjrAt0A)
-
-5级路线图：
-
-+ L1：聊天机器人，具有对话能力的AI。
-+ L2：推理者，像人类一样能够解决问题的AI。
-+ L3：智能体，不仅能思考，还可以采取行动的AI系统。
-+ L4：创新者，能够协助发明创造的AI。
-+ L5：组织者，可以完成组织工作的AI。
-
-Strawberry模型的目的是为了使公司的AI不仅能生成查询答案，还能提前计划，足够自主且可靠地浏览互联网，进行OpenAI所称的「深度研究」。
-
-类似[Star: Self-taught reasoner bootstrapping reasoning with reasoning](https://arxiv.org/pdf/2203.14465.pdf)能够通过迭代创建自己的训练数据，来「自我提升」到更高的智能水平。
-
-
-[Nature封面：AI训练AI，越训越离谱](https://mp.weixin.qq.com/s/l9ka81Cj2LFzNbXXsaEbmA)
-
-[AI models collapse when trained on recursively generated data](https://www.nature.com/articles/s41586-024-07566-y)，对应下载的[pdf](https://github.com/daiwk/collections/blob/master/assets/nature-ai-train-ai.pdf)
-
+# 从RLAIF说起
 
 ## RLAIF(Constitutional AI)
 
@@ -190,6 +158,41 @@ $$
 
 
 另外，发现小的模型更容易出现position bias，即给定两个候选，换一下顺序，模型还是觉得同一个位置的更好。缓解：每个pair反转前后各过一遍模型，然后得分avg一下。
+
+
+
+# O1
+
+## from r to Q*
+
+[这就是OpenAI神秘的Q*？斯坦福：语言模型就是Q函数](https://mp.weixin.qq.com/s/Mz_k5ensgiuXu-3cFQ1Dkw)
+
+[From r to Q*: Your Language Model is Secretly a Q-Function](https://arxiv.org/pdf/2404.12358.pdf)
+
+在DPO的基础上，引入LLM里的token-level的MDP，用二分类的preference feedback。发现了3个点：
+
++ 尽管 DPO 是作为上下文多臂赌博机而派生出来的，但DPO模型的隐含奖励可在每个 token 层面上进行解释。
++ DPO模型的likelihood search类似在decoding阶段寻找一个reward function。即在token层面的阐述方式下，经典的基于搜索的算法（比如 MCTS）等价于在 DPO策略上的基于似然的搜索。
++ 初始策略和参考分布的选择对于确定训练期间隐性奖励的轨迹非常重要。
+
+[OpenAI秘密武器「草莓」计划曝光！Q*推理能力大爆发，逼近AGI L2里程碑](https://mp.weixin.qq.com/s/qq_E05Tab-ptRqGDjrAt0A)
+
+5级路线图：
+
++ L1：聊天机器人，具有对话能力的AI。
++ L2：推理者，像人类一样能够解决问题的AI。
++ L3：智能体，不仅能思考，还可以采取行动的AI系统。
++ L4：创新者，能够协助发明创造的AI。
++ L5：组织者，可以完成组织工作的AI。
+
+Strawberry模型的目的是为了使公司的AI不仅能生成查询答案，还能提前计划，足够自主且可靠地浏览互联网，进行OpenAI所称的「深度研究」。
+
+类似[Star: Self-taught reasoner bootstrapping reasoning with reasoning](https://arxiv.org/pdf/2203.14465.pdf)能够通过迭代创建自己的训练数据，来「自我提升」到更高的智能水平。
+
+
+[Nature封面：AI训练AI，越训越离谱](https://mp.weixin.qq.com/s/l9ka81Cj2LFzNbXXsaEbmA)
+
+[AI models collapse when trained on recursively generated data](https://www.nature.com/articles/s41586-024-07566-y)，对应下载的[pdf](https://github.com/daiwk/collections/blob/master/assets/nature-ai-train-ai.pdf)
 
 
 ## 自我奖励
