--- a/posts/0.contents.md
+++ b/posts/0.contents.md
@@ -6,8 +6,8 @@
     + [llm_archs](https://www.daiwk.net/1.3.llm_archs)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_archs.pdf)
     + [llm_sft_and_usages](https://www.daiwk.net/1.4.llm_sft_and_usages)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_sft_and_usages.pdf)
     + [llm_alignment](https://www.daiwk.net/1.5.llm_alignment)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_alignment.pdf)
-    + [llm_multimodal](https://www.daiwk.net/1.6.llm_multimodal)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_multimodal.pdf
-    + [llm_multimodal](https://www.daiwk.net/1.7.llm_recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_recommend.pdf))
+    + [llm_multimodal](https://www.daiwk.net/1.6.llm_multimodal)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_multimodal.pdf)
+    + [llm_recommend](https://www.daiwk.net/1.7.llm_recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_recommend.pdf)
     + [llm_o1](https://www.daiwk.net/1.8.llm_o1)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_o1.pdf)
     + [llm_others](https://www.daiwk.net/1.9.llm_others)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/llm_others.pdf)
 + [recommend](https://www.daiwk.net/2.recommend)，对应[pdf](https://github.com/daiwk/collections/blob/master/pdfs/recommend.pdf)
