--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -4907,6 +4907,8 @@ kvcache的量化：[https://zhuanlan.zhihu.com/p/691537237](https://zhuanlan.zhi
 
 [Efficient Memory Management for Large Language Model Serving with PagedAttention](https://arxiv.org/pdf/2309.06180.pdf)
 
+对比sglang/trt-llm：[https://blog.vllm.ai/2024/09/05/perf-update.html](https://blog.vllm.ai/2024/09/05/perf-update.html)，看着和trt-llm差不多，sglang更菜
+
 ## 并行推理方法
 
 [Efficiently scaling transformer inference](https://arxiv.org/pdf/2211.05102.pdf)
