--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -488,6 +488,12 @@ class RQBottleneck(nn.Module):
         return commitment_loss
 ```
 
+## Tiger应用在排序
+
+[Better Generalization with Semantic IDs: A Case Study in Ranking for Recommendations](https://arxiv.org/pdf/2306.08121)
+
+
+
 ## HSTU
 
 [如何评价Meta最新推荐论文: 生成式推荐打败深度分层架构推荐？](https://mp.weixin.qq.com/s/MeH2drBIBML5OSfCujIJ0Q)
