--- a/posts/1.4.llm_sft_and_usages.md
+++ b/posts/1.4.llm_sft_and_usages.md
@@ -459,3 +459,8 @@ Flan-T5和Flan-PaLM（[Scaling instruction-finetuned language models](https://ar
     + 提示中组成部分的影响：
 
 # 能力评测
+
+[史上最严“中文真实性评估”：OpenAI o1第1豆包第2，其它全部不及格](https://mp.weixin.qq.com/s/T8OmSsR-PLkmOfhniGnfdQ)
+
+[Chinese SimpleQA: A Chinese Factuality Evaluation for Large Language Models](https://arxiv.org/abs/2411.07140)
+
