--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -39,6 +39,20 @@
 
 [WHALE: TOWARDS GENERALIZABLE AND SCALABLE WORLD MODELS FOR EMBODIED DECISION-MAKING](https://arxiv.org/pdf/2411.05619)
 
+## genie 2
+
+[谷歌世界模型爆发：单张图生成可玩3D世界，还要和马斯克一起做AI游戏](https://mp.weixin.qq.com/s/PaUScHrclUwYABwT8LL5zg)
+
+[https://deepmind.google/discover/blog/genie-2-a-large-scale-foundation-world-model/](https://deepmind.google/discover/blog/genie-2-a-large-scale-foundation-world-model/)
+
+## NWM
+
+[LeCun团队新作：在世界模型中导航](https://mp.weixin.qq.com/s/V5rXxbLYmR8UuiVq-gsi9A)
+
+[Navigation World Models](https://arxiv.org/pdf/2412.03572v1)
+
+[https://www.amirbar.net/nwm/](https://www.amirbar.net/nwm/)
+
 # 语言物理学
 
 (toread)
@@ -118,6 +132,10 @@
 [长文本杀不死RAG：SQL+向量驱动大模型和大数据新范式，MyScale AI数据库正式开源](https://mp.weixin.qq.com/s/JvyKnEbdOSb1fTwhiQTO5A)
 
 [https://github.com/myscale/myscaledb](https://github.com/myscale/myscaledb)
+
+## Zilliz
+
+[向量数据库的中场战事：长期主义者Zilliz如何全球突围](https://mp.weixin.qq.com/s/lRryjRiUGKdT11qfi62pUg)
 
 ## 记忆能力
 
@@ -348,6 +366,18 @@ $$
 
 [AgentOccam: A Simple Yet Strong Baseline for LLM-Based Web Agents](https://arxiv.org/abs/2410.13825)
 
+## 苏格拉底学习
+
+[DeepMind用语言游戏让大模型学AlphaGo自我博弈，数据限制不存在了](https://mp.weixin.qq.com/s/EC5QdHcasev8JpTp-OKLKQ)
+
+[Boundless Socratic Learning with Language Games](https://arxiv.org/abs/2411.16905)
+
+## 从个人模拟到社会模拟
+
+[智能体模拟《西部世界》一样的社会，复旦大学等出了篇系统综述](https://mp.weixin.qq.com/s/Uy_NYkDGp9CqmO2j9XOfCA)
+
+[From Individual to Society: A Survey on Social Simulation Driven by Large Language Model-based Agents](https://arxiv.org/abs/2412.03563)
+
 # 一些其他比较重要的工作
 
 ## 几篇出现频率比较高的论文
@@ -557,7 +587,7 @@ $$
 
 # prompt engineering
 
-[万字长文总结提示词技巧！新加坡首届GPT-4提示工程大赛冠军最新分享](https://mp.weixin.qq.com/s/AWnQL3forAP-gB7e2ZEXdQ)
+[万字长文总结提示词技巧！新加坡首届GPT-4提示工程大赛冠军最新分享](https://mp.weixin.qq.com/s/AWnQL3forAP-gB7e2ZEXdQ) 提出了CO-STAR框架
 
 [高能干货分享，有关提示词工程的一切都在这份教程里](https://mp.weixin.qq.com/s/RaIzHtRIShIcpXydRE6kQg)
 
@@ -744,6 +774,12 @@ Neel Nanda（deepmind）的项目
 [任意论文一键变播客，谷歌正式发布Illuminate，它能重构研究者的学习方式吗？](https://mp.weixin.qq.com/s/2C2B5yNLjXXYyDQnQgqPyQ)
 
 [https://illuminate.google.com/home](https://illuminate.google.com/home)
+
+# LLM+芯片设计
+
+[登上Nature的AI芯片设计屡遭质疑，谷歌发文反击，Jeff Dean：质疑者连预训练都没做](https://mp.weixin.qq.com/s/u1NNmulcykGkgZjJb_A-UA)
+
+[That Chip Has Sailed: A Critique of Unfounded Skepticism Around AI for Chip Design](https://arxiv.org/pdf/2411.10053)
 
 # 其他
 
