--- a/posts/1.llm_aigc.md
+++ b/posts/1.llm_aigc.md
@@ -1391,6 +1391,11 @@ SIGIR24最佳论文：[Scaling Laws For Dense Retrieval](https://arxiv.org/pdf/2
 
 你训练的 token 越多，你需要的精度就越高。
 
+### Densing law
+
+[LLM最大能力密度100天翻一倍！清华刘知远团队提出Densing Law](https://mp.weixin.qq.com/s/O_jtO2ZuL11XB9GlaURsWg)
+
+[Densing Law of LLMs](https://arxiv.org/pdf/2412.04315v2)
 
 ## 涌现能力
 
