--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -838,13 +838,23 @@ SIGIR2023 \| ID vs 模态: 推荐系统ID范式有望被颠覆？
 [对应的ppt](https://github.com/westlake-repl/MicroLens/blob/master/MicroLens_DeepMind_Talk.pdf)
 
 
-## agent4rec
+## 多智能体+推荐
+
+### agent4rec
 
 [On Generative Agents in Recommendation](https://arxiv.org/pdf/2310.10108.pdf)
 
 word版的笔记：[https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx](https://github.com/daiwk/collections/blob/master/assets/multi-agents.docx)
 
 [https://github.com/LehengTHU/Agent4Rec](https://github.com/LehengTHU/Agent4Rec)
+
+### MACRec
+
+[MACRec: a Multi-Agent Collaboration Framework for Recommendation](https://arxiv.org/pdf/2402.15235)
+
+
+
+
 
 ## 拿推荐语料微调LLM
 
