--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1388,3 +1388,10 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 [小红书搜索：生成式检索的探索与实践](https://mp.weixin.qq.com/s/yApGxCGxjWnZQu8PoO9Qeg)
 
 [Generative Dense Retrieval: Memory Can Be a Burden](https://arxiv.org/abs/2401.10487)
+
+## LLM-CF
+
+[2024'快手提出LLM-CF框架，借助LLM的链式思维（COT）推理提升推荐系统性能](https://mp.weixin.qq.com/s/-NJPxj-1JknKl0JdVYIB5g)
+
+CIKM24，[Large Language Models Enhanced Collaborative Filtering](https://arxiv.org/pdf/2403.17688)
+
