--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -391,6 +391,14 @@ ICLR2024
 
 [https://github.com/geekan/MetaGPT](https://github.com/geekan/MetaGPT)
 
+## insight-V
+
+[多智能体架构Insight-V来了！突破长链视觉推理瓶颈](https://mp.weixin.qq.com/s/-8TvvTDa7zeEUlzcbtuPWg)
+
+[Insight-V: Exploring Long-Chain Visual Reasoning with Multimodal Large Language Models](https://arxiv.org/abs/2411.14432)
+
+[https://github.com/dongyh20/Insight-V](https://github.com/dongyh20/Insight-V)
+
 # 一些其他比较重要的工作
 
 ## 几篇出现频率比较高的论文
