--- a/posts/1.7.llm_recommend.md
+++ b/posts/1.7.llm_recommend.md
@@ -1395,3 +1395,81 @@ def unified_model_forward(model, model_type: str, inputs: dict, normalize_emb: b
 
 CIKM24，[Large Language Models Enhanced Collaborative Filtering](https://arxiv.org/pdf/2403.17688)
 
+文中用到的instruction prompt参考（Recsys23的[TALLRec: An Effective and Efficient Tuning Framework to Align Large Language Model with Recommendation](https://arxiv.org/pdf/2305.00447)和WWW24的[ReLLa: Retrieval-enhanced Large Language Models for Lifelong Sequential Behavior Comprehension in Recommendation](https://arxiv.org/pdf/2308.11131)），把推荐变成了一个让模型输出yes/no的2分类任务。
+
+![](../assets/text-features.png)
+
+整体的框架如下：
+
+![](../assets/llm-cf-online-offline.png)
+
++ 离线：
+  + finetune LLM使其具有推荐能力
+  + 使用CF的信息生成CoT Reasoning
+  + 构造一个in-context CoT数据集
++ 在线：
+  + 检索和用户相似的in-context CoT examples，学习世界知识和Reasoning指导的CF特征，拿来给推荐系统用
+
+
+### 离线部分
+
+#### recgen-llama
+
+&nbsp;
+
+如果直接用TALLRec的方法，会有灾难性遗忘，模型在原来的LLM benchmark上效果会下降很多，提出了一种简洁高效的全量参数微调方法，在general data和推荐能力上找到平衡，可能的做法
+
++ base：不微调，原始llama2
++ half：用一半的推荐数据全量参数微调
++ full：用全量推荐数据全量参数微调
++ LoRA：对Q和V矩阵加LoRA，设置rank=8
++ 加噪声：[NEFTune: Noisy Embeddings Improve Instruction Finetuning](https://arxiv.org/pdf/2310.05914)和[HyPe: Better Pre-trained Language Model Fine-tuning with Hidden Representation Perturbation](https://arxiv.org/pdf/2212.08853)，用推荐数据finetune的时候，在input的embedding层加噪声
++ R3F：[Better Fine-Tuning by Reducing Representational Collapse](https://arxiv.org/pdf/2008.03156)基于置信域的逼近
++ Wise-FT：[Robust Fine-Tuning of Zero-Shot Models](https://arxiv.org/pdf/2109.01903)，这个引用量挺高的，[https://github.com/mlfoundations/wise-ft](https://github.com/mlfoundations/wise-ft)，将pretrained和finetuned的权重加权融合：$$W_{\text {ensemble }}=\alpha \cdot W_{\text {fine-tuned }}+(1-\alpha) \cdot W_{\text {pre-trained }}$$
++ RecGen：[How Abilities in Large Language Models are Affected by Supervised Fine-tuning Data Composition](https://arxiv.org/pdf/2310.05492)发现通过mixed-data finetuning能够保持通用能力的情况下，提升数学和代码能力
+
+对比下来发现，R3F在推荐和MMLU上都最差，full在推荐上效果最好但在MMLU上不太行，RecGen在推荐的效果还不错在MMLU也没降多少，所以将推荐数据和通用数据(如LIMA([Lima: Less is more for alignment](https://arxiv.org/pdf/2305.11206))和alpaca-gpt4([Instruction tuning with gpt-4](https://arxiv.org/pdf/2304.03277)))混合，
+
+
+#### CoT Reasoning生成
+
+&nbsp;
+
+
+CoT prompt：
+
+```
+<<SYS>> As an AI model developed for analyzing consumer behavior, your task is to
+generate a chain of thought that considers the following points:
+1. Utilize the user's interaction history and review comments to summarize their profiles.
+2. Introduce the target new item and detail its features precisely. In addition, integrate
+information about items related to the current target new item ...
+1. Contemplate the alignment between the user's profile and the features of the target item.
+2. Reflect on the user's potential desire for diversity in their purchases.
+Your output should be a clear and logical chain of thought... Ensure your analysis is
+impartial... Focus should be on understanding factors that influence the user‘s decisionmaking regarding the target item. <</SYS>>
+Please generate a chain of thought based on the user‘s … considering how these might
+relate to their interest in the target new item.
+{Recommendation Features}
+User's decision-making: The user {Ground-Truth Label} the target new item.
+Let's think step by step and develop the chain of thought for the above considerations.
+Commence with the chain of thought immediately: 
+
+---------------
+
+<<SYS>> 作为一个用于分析消费者行为的AI模型，您的任务是生成一条思维链，考虑以下几点：
+1. 利用用户的互动历史和评论总结他们的个人画像。
+2. 介绍目标新商品并详细说明其特点。此外，整合与当前目标新商品相关的其他商品信息。
+3. 思考用户画像与目标商品特性之间的契合度。
+4. 反思用户在购买中可能对多样化的需求。
+您的输出应当是一个清晰且逻辑严谨的思维链，确保您的分析公正无偏，重点应放在理解影响用户决策的因素。<</SYS>>
+请生成一个思维链，基于用户的……考虑这些因素可能如何影响他们对目标新商品的决策。
+{Recommendation Features}
+用户的决策：用户 {Ground-Truth Label} 目标新商品。
+让我们一步一步地开发上述考虑因素的思维链。
+立即开始思维链：
+```
+
+
+### 在线部分
+
