--- a/posts/1.2.llm_intro.md
+++ b/posts/1.2.llm_intro.md
@@ -2651,6 +2651,10 @@ iclr23 [GLM-130B: An Open Bilingual Pre-trained Model](https://arxiv.org/abs/221
 
 [我扒出了Gemini 2.0超实时多模态幕后的黑科技，第六代TPU芯片Trillium！](https://mp.weixin.qq.com/s/BZpL9PwvCWmR4R6h2502Kw)
 
+[谷歌逆风翻盘暴击OpenAI，90天王者归来！44页报告押注25年三大技术前沿](https://mp.weixin.qq.com/s/b0yqPre6wMlP59cH6Qrbdw)
+
+[data and ai trends report 2024](https://services.google.com/fh/files/misc/data_ai_trends_report.pdf)
+
 ### gemma
 
 [https://blog.google/technology/developers/gemma-open-models/](https://blog.google/technology/developers/gemma-open-models/)
