--- a/posts/1.9.llm_others.md
+++ b/posts/1.9.llm_others.md
@@ -399,6 +399,11 @@ ICLR2024
 
 [https://github.com/dongyh20/Insight-V](https://github.com/dongyh20/Insight-V)
 
+## 世界经济论坛的agent报告
+
+[Navigating the AI Frontier: A Primer on the Evolution and Impact of AI Agents](https://reports.weforum.org/docs/WEF_Navigating_the_AI_Frontier_2024.pdf)
+
+
 # 一些其他比较重要的工作
 
 ## 几篇出现频率比较高的论文
