--- a/posts/1.6.llm_multimodal.md
+++ b/posts/1.6.llm_multimodal.md
@@ -479,6 +479,12 @@ DALL-E3：
 
 [https://github.com/JiuhaiChen/Florence-VL](https://github.com/JiuhaiChen/Florence-VL)
 
+## metamorph
+
+[统一视觉理解与生成，MetaMorph模型问世，LeCun、谢赛宁、刘壮等参与](https://mp.weixin.qq.com/s/Q0obsptFhlZ-R9xH3LCGVw)
+
+[MetaMorph: Multimodal Understanding and Generation via Instruction Tuning](https://arxiv.org/pdf/2412.14164v1)
+
 ## 其他
 
 (toread)
